<?xml version="1.0"?>
<package>
  <name>plane_registration</name>
  <version>0.1.0</version>
  <description>The plane_registration package</description>

  <maintainer email="xli87@jhu.edu">Xiao Li</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>cmake_modules</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
